--- a/TATAMotors.ipynb
+++ b/TATAMotors.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "88dca6cc-c5d8-4f22-a896-0ecb0c8a20b8",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "74488991-75e7-4811-a8d8-872c1745d158",
    "metadata": {},
    "outputs": [],
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "444c35c5-96b2-485c-a70a-6bbad5b35b45",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "id": "28bf943f-1b5d-4a6c-80b9-ee755270c71b",
    "metadata": {},
    "outputs": [],
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "4319d918-28b6-4d03-8b82-6ffe14c37dd9",
    "metadata": {},
    "outputs": [],
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "id": "c3e64702-9a1e-43d0-bd2e-648329dcc24f",
    "metadata": {},
    "outputs": [],
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "id": "17bef509-2c04-43c9-9aab-acddb722380d",
    "metadata": {},
    "outputs": [],
@@ -143,67 +143,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "ddb28a30-d881-49de-901a-b7efd2417499",
+   "execution_count": 15,
+   "id": "f25d3c82-60f0-4596-9936-865485caf0c9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "peak_tm = tm['Adj Close'].max()"
+    "def max_drawdown(prices):\n",
+    "    max_dd = 0\n",
+    "    peak = prices[0]\n",
+    "\n",
+    "    for price in prices:\n",
+    "        if price > peak:\n",
+    "            peak = price\n",
+    "        drawdown = (price - peak) / peak * 100\n",
+    "        if drawdown < max_dd:\n",
+    "            max_dd = drawdown\n",
+    "    \n",
+    "    return max_dd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "910a13e7-a332-4aab-8908-0582e030b123",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_drawdown_tm = max_drawdown(tm['Adj Close'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "4a7eb4f6-0966-42b1-b158-557e8a00b386",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_drawdown_nf = max_drawdown(nf['Adj Close'])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b34769f2-f4b3-4a0d-ab6c-78c0a440ac33",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "peak_nf = nf['Adj Close'].max()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "aa8b88db-a7de-48c9-bb88-c9be78de8503",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trough_tm = tm['Adj Close'].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "327dee7a-65f0-4267-bfbc-f6b4238e6018",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trough_nf = nf['Adj Close'].min()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "910a13e7-a332-4aab-8908-0582e030b123",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_drawdown_tm = (trough_tm - peak_tm) / peak_tm * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "4a7eb4f6-0966-42b1-b158-557e8a00b386",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "max_drawdown_nf = (trough_nf - peak_nf) / peak_nf * 100"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
    "id": "0294f583-c642-45fd-b73c-8b018222137b",
    "metadata": {},
    "outputs": [
@@ -221,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 19,
    "id": "8f571849-0794-481d-846a-3b1cdeced35e",
    "metadata": {},
    "outputs": [
@@ -239,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "id": "74dbff54-1620-43fd-a4e7-7907c760358f",
    "metadata": {},
    "outputs": [
@@ -257,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "02c3edb1-694a-4e30-9dee-cc34f61f49da",
    "metadata": {},
    "outputs": [
@@ -275,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "id": "c9cf73cd-d927-4c6f-856b-66c73a47c593",
    "metadata": {},
    "outputs": [
@@ -283,17 +264,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Drawdown (Nifty50): -22.653159786155683\n"
+      "Max Drawdown (Nifty50): -6.611908147652758%\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Max Drawdown (Nifty50): {max_drawdown_nf}\")   "
+    "print(f\"Max Drawdown (Nifty50): {max_drawdown_nf}%\")   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "id": "9029debc-34f7-4bc0-af6a-9b5dab48a6cf",
    "metadata": {},
    "outputs": [
@@ -301,12 +282,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Max Drawdown (TATA MOTORS): -59.30608492086481\n"
+      "Max Drawdown (TATA MOTORS): -9.511209816302157%\n"
      ]
     }
    ],
    "source": [
-    "print(f\"Max Drawdown (TATA MOTORS): {max_drawdown_tm}\")"
+    "print(f\"Max Drawdown (TATA MOTORS): {max_drawdown_tm}%\")"
    ]
   }
  ],
